--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1> Hello World!!</h1>
-  <img src="flower.jpeg"></img>
+  <img src="C:\Users\Happy\Desktop\Deepa\flower.jpeg"></img>
 </body>
 </html>
