--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1> Hello World!!</h1>
-  <img src="C:\Users\Happy\Desktop\Deepa\flower.jpeg"></img>
+  <img src="https://pixabay.com/photos/rose-flower-dew-dewdrops-droplets-165819/"></img>
 </body>
 </html>
