--- a/index.html
+++ b/index.html
@@ -1,6 +1,84 @@
 <html>
+<head>
+<style>
+	body{
+		background-color:#B0E0E6;
+		font-family: Verdana;
+}
+	#container{
+		background-color:white;
+		width:850px;
+		height:700px;
+		margin-left:auto;
+		margin-right:auto;
+}
+	#header{
+		background-color:#66CCFF;
+		color:white;	
+		text-align:center;
+		padding:10px;
+}
+	#content{
+		padding:10px;
+}
+	#nav{
+		width:180px;
+		float:left;
+		text-align:center;
+}
+	#main{
+		width:600px;
+		float:right;
+}
+	#footer{
+		clear:both;
+		padding:10px;
+		background-color:#999999;
+		color:white;
+		text-align:right;
+}
+	#nav .selected{
+		font-weight:bold;
+}
+	a{
+		text-decoration:none;	
+		color:red;		
+}
+	#nav ul{
+		list-style-type: none;
+		padding:0;
+}
+	h1{
+		margin=0;
+}
+</style>
+</head>
 <body>
-<h1> Hello World!!</h1>
-  <img src="Deepatp/Test.github.io/flower.jpeg"></img>
+	<div id="container">
+		<div id="header">
+			<h1> My website</h1>
+		</div>
+		<div id="content">
+			<div id="nav">
+				<ul>
+					<li><a class="selected" href="">Home</a></li>
+					<li>About</li>
+					<li>Contact</li>
+				</ul>
+			</div>
+			<div id="main">
+				<p>Hypertext Markup Language is the standard markup language for documents designed to be 
+				displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets 
+				and scripting languages such as JavaScript. </p>
+
+				<p>HTML (HyperText Markup Language) is the most basic building block of the Web. It defines 
+				the meaning and structure of web content. Other technologies besides HTML are generally used 
+				to describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).</p>
+			</div>
+		</div>
+	<!--	<div id="footer">
+			copyright &copy; 2020 Deeps
+		<div> -->
+	</div>
 </body>
 </html>
