--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 		<div id="header">
 			<h1> My website</h1>
 		</div>
+		<table>
+			<tr>
+				<th>Home</th>
+				<th>About us</th>
+				<th>Contact us</th>
+				<th>Gallery</th>
+			</tr>				
+		</table>
 		<div id="content">
 			<div id="nav">
 				<ul>
