--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div id="header">
 			<h1> My website</h1>
 		</div>
-		<table>
+		<table border=2>
 			<tr>
 				<th>Home</th>
 				<th>About us</th>
