--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
 		margin=0;
 }
 	table{
+		border-collapse: collapse;
+		width:100%;
+		height:50%;
 		
-		
+}
+	th:hover{
+		background-color:#f5f5f5;
+		background-color: #4CAF50;
+ 		color: white;
 }
 </style>
 </head>
