--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		color:white;	
 		text-align:center;
 		padding:10px;
+		font-family:forte;
 }
 	#content{
 		padding:10px;
@@ -54,13 +55,17 @@
 	table{
 		border-collapse: collapse;
 		width:100%;
+		height=10%
+		boder-color:AliceBlue;
 		
 		
 }
-	th:hover{
-		background-color:#f5f5f5;
+	th{
 		background-color: #4CAF50;
  		color: white;
+}
+	th:hover{
+		background-color:#f5f5f5;		
 }
 </style>
 </head>
