--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 	table{
 		border-collapse: collapse;
 		width:100%;
-		height=20%
+		height=30%
 		boder-color:AliceBlue;
 		
 		
 }
 	th{
-		background-color:#f5f5f5;
+		background-color:#4CAF50;
  		color: white;
 }
 	th:hover{
-		background-color:#4CAF50;		
+		background-color:#7FFFD4;		
 }
 </style>
 </head>
