--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 	table{
 		border-collapse: collapse;
 		width:100%;
-		height=30%
-		boder-color:AliceBlue;
+		height:20%
+		border-color:AliceBlue;
 		
 		
 }
