--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 		margin=0;
 }
 	table{
+		border:none;
 		border-collapse: collapse;
 		width:100%;
-		height:20%
-		border-color:AliceBlue;
+		height:30%		
 		
 		
 }
@@ -74,7 +74,7 @@
 		<div id="header">
 			<h1> My website</h1>
 		</div>
-		<table border=2>
+		<table >
 			<tr>
 				<th>Home</th>
 				<th>About us</th>
