--- a/index.html
+++ b/index.html
@@ -60,26 +60,26 @@
 		
 		
 }
-	th{
+	td{
 		background-color:#4CAF50;
  		color: white;
 }
-	th:hover{
+	td:hover{
 		background-color:#7FFFD4;		
 }
 </style>
 </head>
 <body>
-	<div id="container">
+	<div id="container">	
 		<div id="header">
 			<h1> My website</h1>
 		</div>
 		<table >
 			<tr>
-				<th>Home</th>
-				<th>About us</th>
-				<th>Contact us</th>
-				<th>Gallery</th>
+				<td>Home</td>
+				<td>About us</td>
+				<td>Contact us</td>
+				<td>Gallery</td>
 			</tr>				
 		</table>
 		<div id="content">
