--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
 		
 		
 }
-	td{
+	th{
 		background-color:#4CAF50;
  		color: white;
-		align:center;
+		
 }
-	td:hover{
+	th:hover{
 		background-color:#7FFFD4;		
 }
+	
 </style>
 </head>
 <body>
@@ -77,10 +78,10 @@
 		</div>
 		<table >
 			<tr>
-				<td>Home</td>
-				<td>About us</td>
-				<td>Contact us</td>
-				<td>Gallery</td>
+				<th><a href="flower.jpeg">Home</a></th>
+				<th>About us</th>
+				<th>Contact us</th>
+				<th>Gallery</th>
 			</tr>				
 		</table>
 		<div id="content">
