--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 }
 	a{
 		text-decoration:none;	
-		color:red;		
+			
 }
 	#nav ul{
 		list-style-type: none;
@@ -86,11 +86,12 @@
 		</table>
 		<div id="content">
 			<div id="nav">
-				<ul>
+				<!--<ul>
 					<li><a class="selected" href="">Home</a></li>
 					<li>About</li>
 					<li>Contact</li>
-				</ul>
+				</ul> -->
+				<img src="flower.jpeg" width="300" height="300" ></img>
 			</div>
 			<div id="main">
 				<p>Hypertext Markup Language is the standard markup language for documents designed to be 
