--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 		padding:10px;
 }
 	#nav{
-		width:180px;
+		width:200px;
 		float:left;
 		text-align:center;
 }
 	#main{
-		width:600px;
+		width:580px;
 		float:right;
 }
 	#footer{
@@ -43,6 +43,7 @@
 }
 	a{
 		text-decoration:none;	
+		color:white;
 			
 }
 	#nav ul{
