--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		background-color:white;
 		width:850px;
 		height:700px;
-		
+		margin-left:auto;
+		margin-right:auto;
 }
 	#header{
 		background-color:#66CCFF;
