--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ p{
 				to describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).</p>
 			</div>
 		</div>
-	<!--	<div id="footer">
+		<div id="footer">
 			copyright &copy; 2020 Deeps
-		<div> -->
+		<div>
 	</div>
 </body>
 </html>
